theme: Don't apply overlap-preventing padding to search results
We show the search results with all the other overview elements like the
dash or the workspace switcher hidden, so there's nothing our results
might overlap with. Also the search results will still have sufficient
spacing from the screen edges because of the paddings specified in
searchResultsContent.

So don't apply those paddings to the search results, giving them a lot
more space on smaller screens.

https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/110

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -1504,8 +1504,6 @@ StScrollBar {
     padding: 1px;
   }
 
-  //Some hacks I don't even
-  .search-display > StBoxLayout,
   .all-apps,
   .frequent-apps > StBoxLayout {
     // horizontal padding to make sure scrollbars or dash don't overlap content
